@startuml

title __CARBASE's Class Diagram__\n

  namespace com.company {
    namespace car {
      namespace ase {
        class com.company.carbase.CarBase {
            ~ maxSize : int
            ~ slots : ArrayList<Slot>
            + CarBase()
            + add()
            + breakCar()
            + printOnBase()
            + printOnFlight()
            + printOnRepair()
            + removeBySerialNumber()
            + toBase()
            + toFlight()
            + toRepair()
            - getCarIndexBySerialNumber()
        }
      }
    }
  }
  

  namespace com.company {
    namespace car {
      namespace ase {
        class com.company.carbase.CarBase.Slot {
            - isBroken : boolean
            - Slot()
        }
      }
    }
  }
  

  namespace com.company {
    namespace car {
      namespace ase {
        enum Status {
          onBase
          onFlight
          onRepair
        }
      }
    }
  }
  

  namespace com.company {
    namespace car {
      namespace ase {
        enum CarStatus {
          Base
          Flight
          None
          Repair
        }
      }
    }
  }
  

  com.company.carbase.CarBase +-down- com.company.carbase.CarBase.Slot
  com.company.carbase.CarBase.Slot o-- com.company.car.Car : car
  com.company.carbase.CarBase.Slot o-- com.company.carbase.CarBase.Slot.Status : carStatus
  com.company.carbase.CarBase.Slot +-down- com.company.carbase.CarBase.Slot.Status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
